More f90-like code

--- a/src/interpolate/fitpack/Makefile
+++ b/src/interpolate/fitpack/Makefile
@@ -2,14 +2,19 @@
 # of the Fortran files found in the current directory.
 # Usage: make LIB=<libname>
 # Pearu
-# FC=gfortran
-# FFLAGS=-O3
-include /home/fiol/trabajo/programas/numfor/scripts/compiler_gnu.mk
+# Modified by J. Fiol	
+
+%.o : %.f90
+	$(FC) -c $(FFLAGS) $(FSHARED) $(patsubst %.o,%.f90,$(@F)) -o $@
+
+SRC:=$(shell ls *.f90)
 
 OBJ=$(patsubst %.f90,%.o,$(shell ls *.f90))
 all: lib$(LIB).a
-$(OBJ):
-	$(FC) -c $(FFLAGS) $(FSHARED) $(patsubst %.o,%.f90,$(@F)) -o $@
+
+# Here are defined the compiler-dependent variables	
+include /home/fiol/trabajo/programas/numfor/scripts/compiler_gnu.mk
+
 lib$(LIB).a: $(OBJ)
 	$(AR) rus lib$(LIB).a $?
 clean:
